// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emoticons Can enter mutliple emoticons 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Emoticons Can enter mutliple emoticons 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
  <br />
  <span>
    ﻿
  </span>
</p>
`;

exports[`Emoticons Can enter mutliple emoticons 3`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
  <br />
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Emoticons Can enter mutliple emoticons 4`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
  <br />
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Emoticons Can enter mutliple emoticons 5`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
  <br />
  <span>
    ﻿
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
     
  </span>
  <span
    class="emoji heart"
    contenteditable="false"
  >
    ❤
  </span>
  <span>
     
  </span>
  <span
    class="emoji unhappysmile"
    contenteditable="false"
  >
    🙁
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Emoticons Can enter mutliple emoticons 6`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Emoticons Can handle a single emoticon 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    This is an emoji 
  </span>
  <span
    class="emoji happysmile"
    contenteditable="false"
  >
    🙂
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Emoticons Can handle a single emoticon 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    This is an emoji 
  </span>
</p>
`;

exports[`Emoticons Can handle a single emoticon 3`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    This is an emoji 
  </span>
</p>
`;
